2007-07-14  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (create_register_alias): Return a boolean rather
	than an integer.
	Check the return value of insert_reg_alias and do not continue to
	create aliases once an insertion has failed.
	(s_unreq): Delete the all-upper-case and all-lower-case
	alternatives as well.

2007-07-12  Kai Tietz   <kai.tietz@onevision.com>

	* symbols.c: Print bfd_hostptr_t to file via fprintf_vma.
	* write.c: Likewise.

2007-07-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/tc-mips.c (mips_dwarf2_format, mips_dwarf2_addr_size): Use
	HAVE_64BIT_SYMBOLS.

2007-07-04  Richard Sandiford  <richard@codesourcery.com>

	* config/tc-mips.c (mips_cpu_info_table): Add new entries for
	{24k,24ke,34k,74k}f{2_1,1_1,x}.  Also add an entry for 74kf3_2.
	Deprecate *x and *fx.
	* doc/c-mips.texi: Document the new CPU arguments.  Deprecate
	*x and *fx.

2007-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-coff.h (x86_64_target_format): Renamed to ...
	(i386_target_format): This
	(TARGET_FORMAT): Use i386_target_format.

	* config/tc-i386.c (x86_64_target_format): Removed.
	(i386_target_format): Handle PE formats.

2007-07-04  Nick Clifton  <nickc@redhat.com>

	* symbols.c (symbol_relc_make_value): Use bfd_sprintf_vma in order
	to get the right length of printed value.

2007-07-03  Nick Clifton  <nickc@redhat.com>

	* COPYING: Replace with GPLv3 text.
	* app.c: Update copyright notice to refer to GPLv3.
	* as.c, as.h, asintl.h, atof_generic.c, bignum.h, bit_fix.h,
	cgen.c, cond.c, debug.c, depend.c, dw2gencfi.c, dw2gencfi.h,
	dwarf2dbg.c, dwarf2dbg.h, ecoff.c, ecoff.h, ehopt.c, emul.h,
	emul_target.h, expr.c, expr.h, flonum-copy.c, flonum.h,
	flonum-konst.c, frags.c, frags.h, hash.c, hash.h, input-file.c,
	input-file.h, input-scrub.c, ibtl-lex.h, itbl-lex.l, itbl-ops.c,
	itbl-ops.h, itbl-parse.y, listing.c, listing.h, literal.c,
	macro.c, messages.c, obj.h, output-file.c, output-file.h, read.c,